--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,13 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : mistergough.com
+tagline: mistergough's blog
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Simon Gough
+  email : mistergough@gmail.com
+  github : mistergough
+  twitter : mistergough
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
